IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3/23/05: Fixed moving of multiple contours.

3/20/05: IMOD_3-5-2
3/20/05: Updated tomography and installation guides.

3/11/05: Added nad_eed_3d, Frangakis and Hegerl's edge-enhancing anisotropic 
diffusion program.

3/10/05: Fixed an eTomo bug in which a process finishing on one axis could
start the next process on the other axis.

3/7/05: In 3dmod, centered FFT of subarea in the subarea so it could be
visualized better; fixed problem with subarea not being updated upon resize.

3/6/05: Fixed synchronization of rubberband state and toolbar.

3/1/05: IMOD_3-5-1
3/1/05: Fixed synchronization of parameters between eTomo panels when Done is
pressed (e.g., Z offset between fine alignment and positioning).

3/1/05: Changed Copytomocom's test for whether to set the log base to 32768
so that it is based on a negative mean instead of a negative maximum.

2/28/05: A procedure in Warpvol for determining the size of input that
needs to be loaded for each output cube had to be run iteratively to avoid
crashes in extreme cases.

2/25/05: IMOD_3-6-0 and branch to IMOD_3-5-0
2/24/05: IMOD_3-4-23
2/24/05: Added sourecdoc program to produce documentation from source files.

2/24/05: Added ability to select multiple contours from more than one object
with Ctrl and first mouse button; contours from multiple objects can be
deleted, shifted/transformed, and moved up and down in Z.

2/24/05: Fixed problems with using Qt Assistant for help by providing fallback
for IMOD_DIR in Windows, and by putting Assistant in IMOD/bin when Qt is not
being packed in distribution. 

2/18/05: IMOD_3-4-22
2/18/05: Added ability to set center of contour rotation and stretching and
display of center as in midas, and allowed contour adjustment when no current
point is defined (as is the case after Ctrl-A).

2/18/05: Fixed problem with eTomo not keeping track of fiducialless, local