@@ -12,12 +12,12 @@ Single-click in the list of filters to select the current filter
 to be applied to the data; in some cases there will be further 
 parameters to select.
 <P>
-Pressing the <B>Apply</B> button will apply the current filter to the 
-ORIGINAL image data.  Double-clicking in the filter list is the 
-same as pressing the <B>Apply</B> button.
+Pressing the <B>Apply</B> button or the <B>a</B> hot key will apply the
+current filter to the ORIGINAL image data.  Double-clicking in the filter list
+is the same as pressing the <B>Apply</B> button.  
 <P>
-Pressing the <B>More</B> button will apply the filter to the CURRENT 
-image data, as modified by previous filter operations.
+Pressing the <B>More</B> button or the <B>b</B> hot key will apply the filter
+to the CURRENT image data, as modified by previous filter operations.
 <P>
 Pressing the <B>Reset</B> button, applying a filter to a different 
 section, closing the window with <B>Done</B>, or flipping the data 
