@@ -1,5 +1,11 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+3/23/05: Fixed problem with float losing contrast setting after going to
+section with slider settings that were truncated to stay in range.
+
+3/23/05: Added a and b hot keys to image processing window and made the
+grow and shrink functions be options in the threshold panel.
+
 3/23/05: Fixed moving of multiple contours.
 
 3/20/05: IMOD_3-5-2
